[gd_scene load_steps=10 format=3 uid="uid://c5u48c0bm4as6"]

[ext_resource type="Script" path="res://components/hurt_component.gd" id="1_fk2mj"]
[ext_resource type="Script" path="res://game/enemies/enemy/enemy.gd" id="1_x8u4k"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="2_4nfkf"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_76v2g"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="3_76w2v"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="6_yvi88"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bmoha"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbx2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kc58g"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_x8u4k")

[node name="Body" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bmoha")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_76v2g")
actor = NodePath("..")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
visible = false
enable_node_path = NodePath("../MoveComponent")

[node name="HurtboxComponent" type="Area2D" parent="."]
script = ExtResource("2_4nfkf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_xbx2c")

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("3_76w2v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_kc58g")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("6_yvi88")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("1_fk2mj")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")
